# configurable-raster-g-buffer

./: CMakeLists.txt  LICENSE  sponza_model_smalltex
src/: conf-gbuffer.cpp  conf-gbuffer.hpp  main.cpp
src/shaders/: cgbuf.frag  cgbuf.vert  shaderinterface.glsl
